2012-01-24  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk. Added new
	functions to API set_create_module_template,
	set_add_user_profile, set_update_template, set_update_user,
	update_network_module, add_network_module_policy,
	set_delete_template, set_delete_module_template, and more.

2012-01-24  Koichiro Kikuchi  <koichiro@rworks.jp>

	* include/functions_servers.php: Merged from trunk. Exclude
	  modules which belong to disabled agent from server performance
	  and lag calculation.

2012-01-19  Vanessa Gil  <vanessa.gil@artica.es>

	* extensions/module_groups.php: Fixed bug: sql error in
	extension "Module Groups" and popup alert.

2012-01-19  Vanessa Gil  <vanessa.gil@artica.es>

	* include/functions_agents.php
	  operation/agentes/estado_monitores.php: Counter modified to ignore
	disabled modules.

2012-01-12  Junichi Satoh  <junichi@rworks.jp>

	* godmode/admin_access_logs.php: Merged from trunk. Fixed user
	filtering does not work.

2012-01-12  Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk. Added new
	functions set_create_snmp_module, set_create_data_module,
	set_create_plugin_module and set_create_alert_template in the API.

2012-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* include/functions_api.php: Added new serialized parameter in 
	set_create_network_module function from api. Without it Web console 
	interface module edit view crash.

	* Bugfix from trunk

2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_forecast.php
	 include/functions_reporting.php: Fixed graphical representation of
	 intervals in projection graphs.

2012-01-03 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.postgreSQL.sql
	 pandoradb.data.postgreSQL.sql: Fixes queries in these scripts.

2011-12-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor.php: Fixe module editor when the